# drone_tracking

./: LICENSE.md  readme.md  start_sim.sh
drone_tracking/: CMakeLists.txt  package.xml  setup.py
drone_tracking/config/: pid_params.yaml
drone_tracking/docs/: put_in_bashrc.md  running_code.md  troubeshoot.md
drone_tracking/include/: PID.h  kf.h  moving_avg.h  null_test.h  px4_offboard.h  uas_px4.h
drone_tracking/launch/: apriltag_camera_launch.launch  apriltag_sitl.launch  broadcast_tf.launch  drone_tracking.launch  mavros_gcs_launch.launch  px4_sitl.launch  start_sitl.launch
drone_tracking/scripts/: apriltag_norm.py  apriltag_position_pub.py  drone_image_raw.py  ekf_tag.py  land_permission.py  logger.py  mavros_tf.py  offb_node_example.py  offboard_drone.py  user_control.py
drone_tracking/scripts/controller/: lqr.py
drone_tracking/scripts/logfiles/: .~lock.Sep_23_18_24.csv#  Aug_20_18_06.csv  Aug_20_18_16.csv  Aug_20_18_18.csv  Sep_23_18_24.csv
drone_tracking/simulations/worlds/: apriltag_world.world
drone_tracking/src/: PID.cpp  cpp_offboard_ex.cpp  kf.cpp  main_null.cpp  moving_avg.cpp  moving_avg_main.cpp  null_test.cpp  offboard_example.cpp  offboard_test.cpp  offboard_tracking.cpp  px4_offboard.cpp  px4_offboard_main.cpp  test_track.cpp  test_user.cpp  uas_px4.cpp  uas_px4_main.cpp
